backend-old.tf
### ==================
### Backend IAM config
### ==================
# resource "aws_iam_role" "backend" {
#   name = "${local.name_prefix}-backend"

#   assume_role_policy = jsonencode({
#     Version = "2012-10-17",
#     Statement = [
#       {
#         Action = "sts:AssumeRole",
#         Effect = "Allow",
#         Principal = {
#           Service = "ec2.amazonaws.com"
#         }
#       }
#     ]
#   })
# }

# resource "aws_iam_instance_profile" "backend" {
#   name = "${local.name_prefix}-backend"
#   role = aws_iam_role.backend.name
# }

# resource "aws_iam_role_policy" "backend" {
#   name = "${local.name_prefix}-backend"
#   role = aws_iam_role.backend.id

#   policy = jsonencode({
#     Version = "2012-10-17",
#     Statement = [
#       {
#         Action   = ["ecr:GetAuthorizationToken"]
#         Effect   = "Allow"
#         Resource = "*"
#       },
#       {
#         Effect = "Allow"
#         Action = [
#           "ecr:BatchCheckLayerAvailability",
#           "ecr:GetDownloadUrlForLayer",
#           "ecr:GetRepositoryPolicy",
#           "ecr:DescribeRepositories",
#           "ecr:ListImages",
#           "ecr:DescribeImages",
#           "ecr:BatchGetImage"
#         ]
#         Resource = [aws_ecr_repository.backend.arn]
#       },
#       {
#         Action   = ["ssm:GetParameter"],
#         Effect   = "Allow",
#         Resource = "arn:aws:ssm:us-east-1:301634789447:parameter/OPEN_AI_API_KEY"
#       },
#       {
#         Action   = ["kms:Decrypt"],
#         Effect   = "Allow",
#         Resource = data.aws_kms_alias.ssm_default.target_key_arn
#       }
#     ]
#   })
# }

# resource "aws_iam_role_policy_attachment" "transcriptions_backend_policy_attach" {
#   role       = aws_iam_role.backend.name
#   policy_arn = aws_iam_policy.transcriptions_uploader_policy.arn
# }

# resource "aws_iam_role_policy_attachment" "milvus_volume_policy_attach" {
#   role       = aws_iam_role.backend.name
#   policy_arn = aws_iam_policy.milvus_volume_policy.arn
# }

### ==============
### Segurity group
### ==============
# resource "aws_security_group" "backend" {
#   name        = "${local.name_prefix}-backend"
#   description = "Traffic to and from backend"
#   vpc_id      = aws_vpc.main.id
# }

# # Backend API ingress rule from LB
# resource "aws_security_group_rule" "backend_api_from_lb" {
#   security_group_id = aws_security_group.backend.id

#   type                     = "ingress"
#   from_port                = 8000
#   to_port                  = 8000
#   protocol                 = "tcp"
#   source_security_group_id = aws_security_group.lb_sg.id
# }

# # Backend egress rule
# resource "aws_security_group_rule" "backend_all_egress" {
#   security_group_id = aws_security_group.backend.id
#   type              = "egress"
#   from_port         = 0
#   to_port           = 0
#   protocol          = "-1"
#   cidr_blocks       = ["0.0.0.0/0"]
# }

### ============
### Instance AMI
### ============
# data "aws_ssm_parameter" "backend_amazon_linux_ami" {
#   name = "/aws/service/ami-amazon-linux-latest/al2023-ami-minimal-kernel-default-x86_64"
# }

### ===============
### Launch template
### ===============
# resource "aws_launch_template" "backend" {
#   name_prefix = "${local.name_prefix}-backend"

#   instance_type = "t2.micro"
#   image_id      = data.aws_ssm_parameter.backend_amazon_linux_ami.value
#   user_data     = base64encode(file("${path.module}/scripts/backend-user-data.sh"))
#   # vpc_security_group_ids = [aws_security_group.backend.id]
#   update_default_version = true

#   key_name = "jnonino-pac"

#   network_interfaces {
#     associate_public_ip_address = true
#     security_groups             = [aws_security_group.backend.id]
#   }

#   iam_instance_profile {
#     name = aws_iam_instance_profile.backend.name
#   }

#   # block_device_mappings {
#   #   device_name = "/dev/xvda"
#   #   ebs {
#   #     volume_size = 30
#   #   }
#   # }

#   lifecycle {
#     create_before_destroy = true
#   }
# }

### ==================
### Auto Scaling Group
### ==================
# resource "aws_autoscaling_group" "backend" {
#   name_prefix = local.name_prefix

#   min_size         = 1
#   max_size         = 1
#   desired_capacity = 1

#   launch_template {
#     id      = aws_launch_template.backend.id
#     version = aws_launch_template.backend.latest_version
#   }

#   vpc_zone_identifier = [for subnet in aws_subnet.public : subnet.id]
#   target_group_arns   = [aws_lb_target_group.backend.arn]
# }
